# End-to-End_Energy_Consumption_Forecasting

./: README.md  pyproject.toml
Data/Processed/: GermanEnergyConsumption.parquet
Notebooks/: 04_AB_testing.ipynb
Results/: y_pred_XGBoost.npy
mlartifacts/4/models/m-24764da2ba904a0298832690746aa876/artifacts/: MLmodel
mlartifacts/4/models/m-24764da2ba904a0298832690746aa876/artifacts/data/: model.pth
mlartifacts/4/models/m-d701a588d45642b3912afd9e9098cea7/artifacts/: MLmodel  requirements.txt
mlartifacts/4/models/m-d701a588d45642b3912afd9e9098cea7/artifacts/data/: model.pth
mlartifacts/5/models/m-fc83b1f86464451e87ca8238a62be30f/artifacts/: MLmodel  conda.yaml
mlartifacts/5/models/m-fc83b1f86464451e87ca8238a62be30f/artifacts/data/: model.pth
