[project]
name = "energy-consumption-env"
version = "0.1.0"
description = "Required packages for the Energy Consumption Forecasting project"
authors = [
    {name = "Rodrigo Amorim"}
]
license = {text = "-"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "pytorch-forecasting (>=1.5.0,<2.0.0)",
    "pytorch-lightning (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
